--- a/src/Components/Layout/MainArea/ServicesPage/SingleService/SingleService.css
+++ b/src/Components/Layout/MainArea/ServicesPage/SingleService/SingleService.css
@@ -1,3 +1,89 @@
 .SingleService {
-	
+    width: 410px;
+    height: 370px;
+}
+
+.SingleService * {
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.SingleService .background {
+    opacity: .75;
+    position: absolute;
+    height: 370px;
+    width: 410px;
+    background-color: #FAF6E9;
+    z-index: -1;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.4)0px 0px 50px 10px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.SingleService .content {
+    height: 370px;
+    width: 410px;
+    font-size: 18px;
+
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.SingleService .content div {
+    height: fit-content;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.SingleService .content img {
+    height: 60%;
+    border-radius: 20px 20px 0px 0px;
+
+}
+
+.SingleService .content h3 {
+    padding: 0px 20px;
+    margin: 7px 0px 0px 0px;
+}
+
+.SingleService .content p {
+    margin: 0;
+    padding: 0px 20px 8px 20px;
+}
+
+.SingleService .content a {
+    width: 125px;
+    height: 80px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+
+    font-weight: 600;
+    background-color: #952323;
+    color: #FAF6E9;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    font-size: 16px;
+    text-decoration: none;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    /* position: relative;
+    top: 10px; */
+}
+
+.SingleService .content a:hover {
+    /* background-color: #A73121; */
+    background-color: #FAF6E9;
+    color: #A73121;
+    border: 1px solid #A73121;
+    transition: all 250ms;
 }
