--- a/src/Components/Layout/MainArea/LocationsPage/LocationItem/Accordion/Accordion.css
+++ b/src/Components/Layout/MainArea/LocationsPage/LocationItem/Accordion/Accordion.css
@@ -30,26 +30,30 @@
     grid-template-columns: 90px 1fr;
 }
 
-.Accordion button {
-    /* width: 85%;
-    height: 40px;
-    margin: auto;
-    margin-top: 12px;
-    font-size: 16px; */
+.Accordion a {
+    /* width: 85%; */
+    /* height: 40px; */
+    /* margin: auto; */
+    /* margin-top: 12px; */
+    font-size: 14px;
 
+    text-decoration: none;
+    text-align: center;
     background: none;
     border: 2px solid var(--color);
-    padding: 0.8em 1em;
+    padding: 0.65em 1em;
     margin: 1em;
-    margin-top: 1.6em;
+    margin-top: 1.5em;
     user-select: none;
     text-transform: uppercase;
     color: var(--color);
-    letter-spacing: 2.2px;
+    letter-spacing: 2.4px;
     cursor: pointer;
     border-radius: 10px;
     transform: translateY(0);
     transition: all 0.3s linear;
+
+    font-weight: 500;
 }
 
 
