--- a/src/Components/Layout/MainArea/LocationsPage/FullCity/FullCity.css
+++ b/src/Components/Layout/MainArea/LocationsPage/FullCity/FullCity.css
@@ -1,6 +1,6 @@
-/* .Raanana {}
+.FullCity {}
 
-.Raanana .grid-container {
+.FullCity .grid-container {
     display: grid;
     grid-template-columns: 350px 1fr;
     margin: 0px 175px;
@@ -10,16 +10,23 @@
 .grid-container>* {
     padding: 10px 20px 10px 20px;
 }
-
 .grid-container .content {
     border: 1px solid gray;
 }
-.grid-container .content > div{
+
+.grid-container .content>div {
     margin-bottom: 35px;
 }
+
 .grid-container p {
     margin: 8px 0px;
 }
+
+
+
+
+
+
 
 .grid-container .link-tree-container {
     background-color: #952323;
@@ -29,8 +36,28 @@
     position: sticky;
     top: 80px;
 }
-.grid-container .content h3{
-    margin-bottom: 10px;
+.link-tree-container .link-tree h3{
+    color: #FAF6E9;
+    font-weight: 800;
+}
+.link-tree-container .link-tree ul{ 
+    list-style: none;
+    padding: 0;
+}
+.link-tree-container .link-tree ul li{ 
+    margin: 5px 0px;
+    font-weight: 500;
+    padding: 5px 0px;
+}
+.link-tree-container .link-tree ul li:hover{ 
+    background-color: #A73121;
+}
+
+.link-tree-container .link-tree ul a li { 
+    color: #FAF6E9;
+}
+.link-tree-container .link-tree ul a{ 
+    text-decoration: none;
 }
 
 
@@ -38,8 +65,9 @@
 
 
 
-
-
+.grid-container .content h3 {
+    margin-bottom: 10px;
+}
 .grid-container .content .hours-and-contact .subj-content {
     display: grid;
     grid-template-columns: 150px 1fr;
@@ -67,16 +95,22 @@
     font-weight: 500;
 }
 
-.hours-and-contact .contact{
+.hours-and-contact .contact {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin: 8px 0px;
 }
-.hours-and-contact .contact > *{
+
+.hours-and-contact .contact>* {
     display: flex;
     align-items: center;
 }
-.hours-and-contact .contact svg{
+
+.hours-and-contact .contact svg {
     color: #952323;
     margin: 0px 10px 0px 0px;
-} */
+}
+
+.p{
+    height: 70px;
+}
