--- a/src/Components/Layout/MainArea/FleetPage/CategoryPage/Item/Item.css
+++ b/src/Components/Layout/MainArea/FleetPage/CategoryPage/Item/Item.css
@@ -20,7 +20,7 @@
 }
 
 .Item .imgHolder {
-    background-color: #911F27;
+    background-color: #A73121;
     /* #F8F0E5; */
     display: flex;
     justify-content: center;
@@ -34,7 +34,7 @@
 
 .Item .stats {
     height: 100%;
-    background-color: #911F27;
+    background-color: #A73121;
     font-size: 16px;
     border-radius: 0px 0px 10px 10px;
 }
@@ -92,11 +92,15 @@
     background-color: #A73121;
     color: #FAF6E9;
     text-decoration: none;
-    border: 1px solid black;
+    border: 1px solid #FAF6E9;
     border-radius: 5px;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+
+    transition: all 0.5s;
 }
 
 .Item .btnHolder a:hover {
-    background-color: #952323;
+    background-color: #FAF6E9;
+    color: #A73121;
+    border: 1px solid #A73121;
 }
