--- a/src/Components/Layout/MainArea/FleetPage/FleetItem/FleetItem.css
+++ b/src/Components/Layout/MainArea/FleetPage/FleetItem/FleetItem.css
@@ -13,6 +13,8 @@
     background-color: #A73121;
 
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+    transition: all 0.5s;
 }
 
 .FleetItem:hover {
