--- a/src/Components/Layout/MainArea/LocationsPage/FullCity/FullCity.css
+++ b/src/Components/Layout/MainArea/LocationsPage/FullCity/FullCity.css
@@ -7,18 +7,18 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.grid-container>* {
+.FullCity.grid-container>* {
     padding: 10px 20px 10px 20px;
 }
-.grid-container .content {
+.FullCity .grid-container .content {
     border: 1px solid gray;
 }
 
-.grid-container .content>div {
+.FullCity .grid-container .content>div {
     margin-bottom: 35px;
 }
 
-.grid-container p {
+.FullCity .grid-container p {
     margin: 8px 0px;
 }
 
@@ -28,35 +28,35 @@
 
 
 
-.grid-container .link-tree-container {
+.FullCity .grid-container .link-tree-container {
     background-color: #952323;
 }
 
-.grid-container .link-tree-container .link-tree {
+.FullCity .grid-container .link-tree-container .link-tree {
     position: sticky;
     top: 80px;
 }
-.link-tree-container .link-tree h3{
+.FullCity .link-tree-container .link-tree h3{
     color: #FAF6E9;
     font-weight: 800;
 }
-.link-tree-container .link-tree ul{ 
+.FullCity .link-tree-container .link-tree ul{ 
     list-style: none;
     padding: 0;
 }
-.link-tree-container .link-tree ul li{ 
+.FullCity .link-tree-container .link-tree ul li{ 
     margin: 5px 0px;
     font-weight: 500;
     padding: 5px 0px;
 }
-.link-tree-container .link-tree ul li:hover{ 
+.FullCity .link-tree-container .link-tree ul li:hover{ 
     background-color: #A73121;
 }
 
-.link-tree-container .link-tree ul a li { 
+.FullCity .link-tree-container .link-tree ul a li { 
     color: #FAF6E9;
 }
-.link-tree-container .link-tree ul a{ 
+.FullCity .link-tree-container .link-tree ul a{ 
     text-decoration: none;
 }
 
@@ -65,21 +65,21 @@
 
 
 
-.grid-container .content h3 {
+.FullCity .grid-container .content h3 {
     margin-bottom: 10px;
 }
-.grid-container .content .hours-and-contact .subj-content {
+.FullCity .grid-container .content .hours-and-contact .subj-content {
     display: grid;
     grid-template-columns: 150px 1fr;
 }
 
-.subj-content .days {
+.FullCity .subj-content .days {
     color: #952323;
     font-weight: 900;
     margin: auto 0px;
 }
 
-.hours-and-contact .open {
+.FullCity .hours-and-contact .open {
     width: fit-content;
     background-color: rgb(70, 180, 70);
     border-radius: 5px;
@@ -87,7 +87,7 @@
     font-weight: 500;
 }
 
-.hours-and-contact .closed {
+.FullCity .hours-and-contact .closed {
     width: fit-content;
     background-color: rgb(205, 57, 57);
     border-radius: 5px;
@@ -95,22 +95,34 @@
     font-weight: 500;
 }
 
-.hours-and-contact .contact {
+.FullCity .hours-and-contact .contact {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin: 8px 0px;
 }
 
-.hours-and-contact .contact>* {
+.FullCity .hours-and-contact .contact>* {
     display: flex;
     align-items: center;
 }
 
-.hours-and-contact .contact svg {
+.FullCity .hours-and-contact .contact svg {
     color: #952323;
     margin: 0px 10px 0px 0px;
 }
 
-.p{
+.FullCity .p{
     height: 70px;
+}
+
+.FullCity .content h3 a{
+    text-decoration: none;
+    color: black;
+}
+.FullCity .content p a{
+    font-weight: 600;
+    color: #A73121;
+}
+.FullCity .content p a:hover{
+    color: #952323;
 }
