--- a/src/Components/Layout/MainArea/ServicesPage/Chauffeur/Chauffeur.css
+++ b/src/Components/Layout/MainArea/ServicesPage/Chauffeur/Chauffeur.css
@@ -101,6 +101,7 @@
 
 
 .grid-container .content h3 {
+    scroll-margin-top: 80px;
     margin-bottom: 10px;
 }
 .grid-container .content .hours-and-contact .subj-content {
