--- a/src/Components/Layout/MainArea/ServicesPage/OneDay/OneDay.css
+++ b/src/Components/Layout/MainArea/ServicesPage/OneDay/OneDay.css
@@ -2,11 +2,11 @@
 	
 }
 
-#header .img-container{
+.OneDay #header .img-container{
     position: relative;
     height: 340px;
 }
-.img-container-content{
+.OneDay .img-container-content{
     position: absolute;
     top: 250px;
     left: 0;
@@ -14,15 +14,15 @@
     width: 100%;
     /* opacity: .3; */
 }
-.img-container-content > div{
+.OneDay .img-container-content > div{
     padding-left: 175px;
     color: #FAF6E9;
     font-size: 26px;
 }
-.img-container-content > div h1{
+.OneDay .img-container-content > div h1{
     margin: 10px 0px;
 }
-#header .img-container img{
+.OneDay #header .img-container img{
     width: 100%;
     padding: 0;
     margin: 0;
@@ -41,19 +41,19 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.grid-container>* {
+.OneDay .grid-container>* {
     padding: 10px 20px 10px 20px;
 }
-.grid-container .content {
+.OneDay .content {
     border: 1px solid gray;
     border-top: none;
 }
 
-.grid-container .content>div {
+.OneDay .content>div {
     margin-bottom: 35px;
 }
 
-.grid-container p {
+.OneDay .grid-container p {
     margin: 8px 0px;
 }
 
@@ -63,37 +63,37 @@
 
 
 
-.grid-container .link-tree-container {
+.OneDay .link-tree-container {
     background-color: #FAF6E9;
 }
 
-.grid-container .link-tree-container .link-tree {
+.OneDay .link-tree {
     position: sticky;
     top: 80px;
 }
-.link-tree-container .link-tree h3{
+.OneDay .link-tree h3{
     color: #952323;
     font-weight: 800;
 }
-.link-tree-container .link-tree ul{ 
+.OneDay .link-tree ul{ 
     list-style: none;
     padding: 0;
 }
-.link-tree-container .link-tree ul li{ 
+.OneDay .link-tree ul li{ 
     margin: 5px 0px;
     font-weight: 500;
     padding: 5px 0px;
     transition: all 150ms;
 }
-.link-tree-container .link-tree ul li:hover{ 
+.OneDay .link-tree ul li:hover{ 
     background-color: #A73121;
     color: #FAF6E9;
 }
 
-.link-tree-container .link-tree ul a li { 
+.OneDay .link-tree ul a li { 
     color: #952323;
 }
-.link-tree-container .link-tree ul a{ 
+.OneDay .link-tree ul a{ 
     text-decoration: none;
 }
 
@@ -102,22 +102,22 @@
 
 
 
-.grid-container .content h3 {
+.OneDay .content h3 {
     scroll-margin-top: 80px;
     margin-bottom: 10px;
 }
-.grid-container .content .hours-and-contact .subj-content {
+.OneDay .subj-content {
     display: grid;
     grid-template-columns: 150px 1fr;
 }
 
-.subj-content .days {
+.OneDay .days {
     color: #952323;
     font-weight: 900;
     margin: auto 0px;
 }
 
-.hours-and-contact .open {
+.OneDay .open {
     width: fit-content;
     background-color: rgb(70, 180, 70);
     border-radius: 5px;
@@ -125,7 +125,7 @@
     font-weight: 500;
 }
 
-.hours-and-contact .closed {
+.OneDay .closed {
     width: fit-content;
     background-color: rgb(205, 57, 57);
     border-radius: 5px;
@@ -133,22 +133,22 @@
     font-weight: 500;
 }
 
-.hours-and-contact .contact {
+.OneDay .contact {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin: 8px 0px;
 }
 
-.hours-and-contact .contact>* {
+.OneDay .contact>* {
     display: flex;
     align-items: center;
 }
 
-.hours-and-contact .contact svg {
+.OneDay .contact svg {
     color: #952323;
     margin: 0px 10px 0px 0px;
 }
 
-.p{
+.OneDay .p{
     height: 70px;
 }
