fixed partners css bug

--- a/src/Components/Layout/FooterArea/OurPartners/OurPartners.css
+++ b/src/Components/Layout/FooterArea/OurPartners/OurPartners.css
@@ -13,7 +13,7 @@
     font-weight: 600;
 }
 
-.OurPartners .grid-container {
+.OurPartners .partners-grid-container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
 }
