--- a/src/Components/Layout/MainArea/HelpPage/TermsAndConditions/TermsAndConditions.css
+++ b/src/Components/Layout/MainArea/HelpPage/TermsAndConditions/TermsAndConditions.css
@@ -1,3 +1,34 @@
 .TermsAndConditions {
-	
+    padding: 0px 175px;
+}
+
+.TermsAndConditions ul a {
+    color: #A73121;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.TermsAndConditions ul li {
+
+    margin: 5px 0px;
+}
+
+.TermsAndConditions .back {
+    margin-top: 100px;
+    color: black;
+    text-decoration: none;
+}
+
+.TermsAndConditions>a {
+    display: inline-block;
+    text-decoration: none;
+}
+
+.TermsAndConditions>a h1 {
+    transition: all 150ms;
+    width: fit-content;
+}
+
+.TermsAndConditions>a h1:hover {
+    color: #A73121;
 }
