--- a/src/Components/Layout/MainArea/HelpPage/FAQ/FAQ.css
+++ b/src/Components/Layout/MainArea/HelpPage/FAQ/FAQ.css
@@ -8,6 +8,7 @@
 
 .FAQ img {
     width: 100%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .FAQ .grid-container {
@@ -38,9 +39,9 @@
     padding: 10px 0px;
 }
 
-.FAQ li:nth-last-of-type(even) {
-    /* background-color: aqua; */
-}
+/* .FAQ li:nth-last-of-type(even) {
+    background-color:#EAC696;
+} */
 
 .FAQ li span {
     font-weight: 700;
@@ -49,4 +50,19 @@
 
 .FAQ .bold {
     font-size: 18px;
+}
+
+.FAQ .form-container {
+    margin: 0px 175px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.FAQ .form-container h1 {
+    margin-bottom: 10px;
+}
+
+.FAQ .form-container h3 {
+    margin-top: 0;
 }
