--- a/src/Components/Layout/MainArea/HelpPage/Info/Info.css
+++ b/src/Components/Layout/MainArea/HelpPage/Info/Info.css
@@ -1,3 +1,20 @@
 .Info {
-	
+    padding: 0px 175px;
+}
+.Info .row-container{
+    margin-bottom: 60px;
+}
+.Info p {
+    font-size: 20px;
+}
+
+.Info p::first-letter {
+    font-weight: 600;
+    font-size: 35px;
+}
+
+.Info .row-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
