--- a/src/Components/Layout/MainArea/HelpPage/Info/InfoItem/InfoItem.css
+++ b/src/Components/Layout/MainArea/HelpPage/Info/InfoItem/InfoItem.css
@@ -5,8 +5,12 @@
     flex-direction: column;
     padding: 5px;
     border: 2px solid #A73121;
+
+    animation: tilt-shaking 600ms;
+    animation-delay: 1s;
 }
-.InfoItem img{
+
+.InfoItem img {
     width: 100%;
 }
 
@@ -32,4 +36,26 @@
 .InfoItem p::first-letter {
     font-size: 16px;
     font-weight: 400;
+}
+
+@keyframes tilt-shaking {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(5deg);
+    }
+
+    50% {
+        transform: rotate(0eg);
+    }
+
+    75% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
