--- a/src/Components/Layout/MainArea/ServicesPage/GroupRental/GroupRental.css
+++ b/src/Components/Layout/MainArea/ServicesPage/GroupRental/GroupRental.css
@@ -24,7 +24,7 @@
     margin: 10px 0px;
 }
 
-.GroupRental #header .img-container img {
+.GroupRental img {
     width: 100%;
     padding: 0;
     margin: 0;
