--- a/src/Components/Layout/MainArea/HelpPage/HelpPage.css
+++ b/src/Components/Layout/MainArea/HelpPage/HelpPage.css
@@ -8,11 +8,15 @@
 
 .HelpPage .grig-container {
     padding: 0px 175px;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    /* grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
-
+    /* display: grid;
+    grid-template-columns: repeat(6, 1fr); */
     gap: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    
 }
 
 .grig-container>* {
