made locations page responsive

--- a/src/Components/Layout/MainArea/LocationsPage/LocationItem/LocationItem.css
+++ b/src/Components/Layout/MainArea/LocationsPage/LocationItem/LocationItem.css
@@ -2,6 +2,7 @@
 .LocationItemActive {
     color: #A73121;
     text-decoration: none;
+    /* min-width: 418px; */
 }
 
 .LocationItem div[class="row"],
