--- a/src/Components/Layout/MainArea/LocationsPage/LocationsPage.css
+++ b/src/Components/Layout/MainArea/LocationsPage/LocationsPage.css
@@ -6,11 +6,14 @@
 .LocationsPage>div[class="locations-container"] {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 60px;
+    column-gap: 60px;
     row-gap: 30px;
     width: 100%;
-
+    
     margin-bottom: 30px;
+    
+    /* column-gap: 49px; */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 412px));
 }
 
 .LocationsPage svg {
