reorganised assets image folders

--- a/src/Components/Layout/MainArea/ServicesPage/ServicesPage.css
+++ b/src/Components/Layout/MainArea/ServicesPage/ServicesPage.css
@@ -3,7 +3,7 @@
 .ServicesPage .image-container {
 	position: relative;
 	height: fit-content;
-	background-image: url("../../../../Assets/Images/road2.png");
+	background-image: url("../../../../Assets/Images/Services/road2.png");
 	opacity: .85;
 	height: 950px;
 	background-size: cover;
