--- a/src/Components/Layout/MainArea/HelpPage/Info/Info.css
+++ b/src/Components/Layout/MainArea/HelpPage/Info/Info.css
@@ -6,11 +6,11 @@
     margin-bottom: 60px;
 }
 
-.Info p {
+.Info #welcome {
     font-size: 20px;
 }
 
-.Info p::first-letter {
+.Info #welcome::first-letter {
     font-weight: 600;
     font-size: 35px;
 }
