--- a/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
+++ b/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
@@ -9,14 +9,16 @@
     margin-bottom: 30px;
 }
 
-.CategoryPage .filter-link {
-    color: black;
-    text-decoration: none;
-}
 
 .CategoryPage .filter-container {
     overflow: hidden;
     max-width: 1337px;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+
+
     background-color: #A73121;
     height: 35px;
     border: 1px solid black;
@@ -32,6 +34,7 @@
 }
 
 .CategoryPage .filter-container h2 {
+    grid-column: span 3;
     margin-top: 0;
     color: black;
     cursor: pointer;
