--- a/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
+++ b/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
@@ -16,8 +16,8 @@
 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 50px 70px 1fr;
-    ;
+    grid-template-rows: 54px 70px 1fr;
+
 
 
     background-color: #A73121;
@@ -36,8 +36,8 @@
     justify-content: space-between;
 }
 
-.MuiInputBase-root input,
-.MuiInputBase-root svg {
+.CategoryPage .MuiInputBase-root input,
+.CategoryPage .MuiInputBase-root svg {
     color: #952323 !important;
     z-index: 3;
 }
@@ -60,8 +60,26 @@
     height: 250px;
 }
 
-.CategoryPage .filter-container button {
+.CategoryPage .filter-container #searchCarBtn {
     grid-column: span 4;
+    width: 220px;
+    height: 46px;
+    margin: auto;
+
+    background-color: #952323;
+    border-radius: 5px;
+    border: 0;
+    color: #FAF6E9;
+    font-size: 22px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    transition: all 300ms;
+}
+
+.CategoryPage .filter-container #searchCarBtn:hover {
+    background-color: #FAF6E9;
+    border: 0;
+    color: #A73121;
+    scale: 1.03;
 }
 
 .CategoryPage .filter-container h2 {
