--- a/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
+++ b/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
@@ -15,8 +15,8 @@
     max-width: 1337px;
 
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 54px 70px 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 54px 1fr;
 
 
 
@@ -30,10 +30,15 @@
     transition: all 200ms;
 }
 
-.CategoryPage .first-row {
-    grid-column: span 4;
+.CategoryPage form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.CategoryPage .firstDiv{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .CategoryPage .MuiInputBase-root input,
