--- a/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
+++ b/src/Components/Layout/MainArea/FleetPage/CategoryPage/CategoryPage.css
@@ -35,10 +35,18 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.CategoryPage .firstDiv{
+
+.CategoryPage .firstDiv {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.CategoryPage .secondDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px; 
 }
 
 .CategoryPage .MuiInputBase-root input,
